food.css
* {
  box-sizing: border-box;
}

table{
    background-color: green;
    width: 50px;
}

#right-panel {
   font-family: 'Roboto','sans-serif';
   line-height: 30px;
   padding-left: 10px;
}

#right-panel select, #right-panel input {
   font-size: 15px;
}

#right-panel select {
   width: 100%;
}

#right-panel i {
   font-size: 12px;
}

#right-panel {
   float: right;
   width: 34%;
   height: 100%;
}


#logo {
  width: 5%;
}

#logo:hover{
  cursor: pointer;
}

.nav-wrapper {
  border: 2px solid black;
}

#mapAndPic {
  width: 100%;
  margin-top: 4%;
}

#pic img{
  width: 60%;
}

.nutritionTitles {
  display: inline-block;
  width: 70%
}

.nutrition {
  margin-top: 5%;
}

.nutritionTitles {
  display: inline-block;
  width: 100%;
}

#map{
  height: 80vh;
  display: none;
}

#findMore {
  display: inline-block;
  background-color: rgb(13, 179, 13);
  cursor: pointer;
  text-align: center;
  text-decoration: none;
  outline: none;
  color: #fff;
  border: none;
  border-radius: 10px;
  box-shadow: 0 3px #999;
}

#findMore:hover {
  background-color: rgb(36, 129, 13);
}

#findMore:active {
  background-color:rgb(18, 85, 5);
  box-shadow: 0 5px #666;
  transform: translateY(4px);
}

#reset {
  display: inline-block;
  background-color: red;
  cursor: pointer;
  text-align: center;
  text-decoration: none;
  outline: none;
  color: #fff;
  border: none;
  border-radius: 15px;
  box-shadow: 0 5px #999;
}

#reset:hover {
  background-color: rgb(190, 28, 16);
}

#reset:active {
  background-color:rgb(126, 15, 7);
  box-shadow: 0 5px #666;
  transform: translateY(4px);
}
 
.nutritionTitles .right-align {
  float: right;
}

.nutrition > div {
  border: 2px solid black;
}

.nutrition > div:nth-child(1) {
  font-weight: bold;
}

.nutritionTitles > div {
  border: 1px solid black;
}

.yelp {
  width: 90%;
}

.yelpImage img {
  width: 100%;
  position: relative;
}

#map {
  height: 50vh;
}

#yelpImage {
  height:100%;
  width: 100%;
}

.yelp > div {
  border: 2px solid black;
  margin-top: 10%;
}

.yelpTitle {
  font-weight: bold;
  border: 1.2px solid black;
}

.yelpTitle, .yelpInfo {
  padding-left: 2%;
}

